# home-seismometer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  log_display.cpp  log_display.hpp  log_display_main.cpp  partitions.csv  sdkconfig  sdkconfig_cyd  sdkconfig_cyd-lsm6dso  sdkconfig_eqis1  ws_receive.py
.github/workflows/: ci.yaml  jekyll.yml  release.yaml
cyd-adxl-esp32s3/: manifest.json
eqis1-esp32s3/: manifest.json
fatfs_long_name_image/: monitor.html  setting.html
main/: CMakeLists.txt  Kconfig.projbuild  LGFX_1732S019_ST7789.hpp  LGFX_EQIS1_SSD1306.hpp  board_def.hpp  data_structure.hpp  home_seismometer_main.cpp  idf_component.yml  task_improv.cpp  task_improv.hpp  task_seis_fft.cpp  task_seis_fft.hpp  task_ws_send.cpp  task_ws_send.hpp
main/network/: device_info.hpp  httpd_suppl.cpp  httpd_suppl.hpp  improv_wifi_aux.cpp  improv_wifi_aux.hpp  improv_wifi_handler.cpp  improv_wifi_handler.hpp  network.cpp  network.hpp  notification.cpp  notification.hpp  rest_api.cpp  rest_api.hpp  storage.cpp  storage.hpp  wlan.cpp  wlan.hpp
main/seismometer/: iir.cpp  iir.hpp  seismometer.hpp  seismometer_void.hpp  shindo_fft_processor.cpp  shindo_fft_processor.hpp
main/sensor/: adxl355.cpp  adxl355.hpp  lsm6dso.cpp  lsm6dso.hpp  sensor_base.hpp
v0.1.2/: cyd-v0.1.2-manifest.json  eqis1-v0.1.2-manifest.json
v0.1.3/: cyd-v0.1.3-manifest.json  eqis1-v0.1.3-manifest.json
v0.2.0/: cyd-v0.2.0-manifest.json  eqis1-v0.2.0-manifest.json
